<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:minHeight="@dimen/toolbar_height"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backImageButton"
            android:src="@drawable/menu_24px"
            android:background="@color/colorPrimary"
            android:layout_marginRight="@dimen/back_button_margin_right"
            android:scaleType="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back_button_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarModeText"
            android:text="@string/toolbar_mode_text"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/toolbar_text_size"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/turnTimeLinearLayout"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/turnLinearLayoutVertical"
            android:layout_weight=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/turn_label_text"
                android:id="@+id/turnLabelText"
                android:textSize="@dimen/play_view_label_text_size"
                android:paddingTop="@dimen/text_view_padding_top"
                android:textColor="@color/text_color"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/turn_text"
                android:id="@+id/turnTextView"
                android:textSize="@dimen/big_text_size"
                android:gravity="center"
                android:paddingTop="@dimen/text_view_padding_top"
                android:paddingBottom="@dimen/text_view_padding_bottom"
                android:textColor="@color/text_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/timeLinearLayoutVertical"
            android:layout_weight=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_label_text"
                android:id="@+id/timeLabelText"
                android:textSize="@dimen/play_view_label_text_size"
                android:paddingTop="@dimen/text_view_padding_top"
                android:textColor="@color/text_color"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_time_text"
                android:id="@+id/mainTimeTextView"
                android:textSize="@dimen/big_text_size"
                android:gravity="center"
                android:paddingTop="@dimen/text_view_padding_top"
                android:paddingBottom="@dimen/text_view_padding_bottom"
                android:textColor="@color/text_color" />

        </LinearLayout>

    </LinearLayout>>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_label_text"
        android:id="@+id/goalLabelText"
        android:textSize="@dimen/play_view_label_text_size"
        android:gravity="center"
        android:paddingTop="@dimen/text_view_padding_top"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_goal_text"
        android:id="@+id/numGoalTextView"
        android:textSize="@dimen/big_text_size"
        android:gravity="center"
        android:paddingTop="@dimen/text_view_padding_top"
        android:paddingBottom="@dimen/text_view_padding_bottom"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_label_text"
        android:id="@+id/currentTotalLabelText"
        android:textSize="@dimen/play_view_label_text_size"
        android:gravity="center"
        android:paddingTop="@dimen/text_view_padding_top"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_total_text"
        android:id="@+id/currentTotalTextView"
        android:textSize="@dimen/big_text_size"
        android:gravity="center"
        android:paddingTop="@dimen/text_view_padding_top"
        android:paddingBottom="@dimen/text_view_padding_bottom"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_choose_text"
        android:id="@+id/numToChooseTextView"
        android:gravity="center"
        android:textSize="@dimen/number_choose_text_size"
        android:paddingTop="@dimen/num_choose_padding"
        android:paddingBottom="@dimen/num_choose_padding"
        android:textColor="@color/text_color" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addSubtractButtonLinearLayout"
        android:layout_gravity="center"
        android:padding="@dimen/add_minus_linear_layout_padding">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addImageButton"
            android:src="@drawable/circle_plus_90px"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@color/background_color"
            android:layout_marginRight="@dimen/add_minus_button_margin"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minusImageButton"
            android:src="@drawable/circle_minus_90px"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@color/background_color"
            android:layout_marginLeft="@dimen/add_minus_button_margin"/>
    </LinearLayout>

</LinearLayout>