<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:minHeight="@dimen/toolbar_height"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary" >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backImageButton"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:background="@color/colorPrimary"
            android:layout_marginRight="@dimen/back_button_margin_right"
            android:scaleType="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back_button_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarSettingText"
            android:text="@string/setting_button_description_text"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/toolbar_text_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_text"
                android:id="@+id/themeTextView"
                android:textSize="@dimen/label_text_size"
                android:textColor="@color/label_text_color"
                android:gravity="center"
                android:padding="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/themeButtonsLinearLayout"
        android:padding="@dimen/theme_button_linear_layout_padding"
        android:weightSum="1.0"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nightThemeButton"
            android:background="@color/button_background_color"
            android:text="@string/night_theme_button_text"
            android:textSize="@dimen/button_text_size"
            android:layout_weight=".50"
            android:layout_marginRight="@dimen/theme_button_margin" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orangeThemeButton"
            android:background="@color/button_background_color"
            android:text="@string/orange_theme_button_text"
            android:textSize="@dimen/button_text_size"
            android:layout_weight=".50"
            android:layout_marginLeft="@dimen/theme_button_margin"/>

    </LinearLayout>

</LinearLayout>